Adding Alt Text to images

--- a/html/AmpleEngine.html
+++ b/html/AmpleEngine.html
@@ -7,7 +7,7 @@
 <body>
     <section class="work-section">
         <div class="work-div">
-            <img src="/Pictures/AmpleMan.JPG" width="100%" align="center"></img>
+            <img src="/Pictures/AmpleMan.JPG" width="100%" align="center" alt = "AmpleEngine Banner Image"></img>
         </div>
         <div class="work-div">
             <h1> What was the project?</h1>
@@ -30,7 +30,7 @@
             <p>You can see the enemies in the video above.</p>
             <p>The enemies I created were supposed to be exact copies of the ones you encounter in the beginning of Megaman X2. I took close reference of them and created them using my own FSM Structure. I created a Base AI with a basic interface that the enemies use to implement their actions in each state.</p>
             <p>Below is the code of this interface</p>
-            <img src="/Pictures/AmpleManCode.png">
+            <img src="/Pictures/AmpleManCode.png" alt = "Image of Code from the Engine">
         </div>
     </section>
     
