--- a/html/CrowdKing.html
+++ b/html/CrowdKing.html
@@ -7,7 +7,7 @@
 <body>
     <section class="work-section">
         <div class="work-div">
-            <img src="/Pictures/CrowdKing.png" align="center"></img>
+            <img src="/Pictures/CrowdKing.png" align="center" alt = "Crowd King Banner Image"></img>
         </div>
         <div class="work-div">
             <h1> What was the project?</h1>
@@ -30,21 +30,21 @@
         </div>
         <div class="work-div">
             <h1> Creating Temporary Flocking </h1>
-            <img src="/Pictures/OffsetCrowdVer2.gif"> 
+            <img src="/Pictures/OffsetCrowdVer2.gif" alt = "Gif of Offset Crowd Behavior"> 
             <p>This is how the "fake flocking" that I quickly created in the beginning looked.</p>
             <p>In the beginning of the project, my team and I thought that it would be the best experience for the players if the little soldiers that run around the player use Flocking like Boids, as it gives the feeling of organic, intelligent movement. However, we weren't sure if it was feasible for us to create such a complex thing in the small time we had. So, as a Plan B and something that we could already test with before the actual BOIDs would be implemented, I created a small algorithm in C++ that would simulate how the soldiers would feel to the players. It was really simple and quickly done, which was exactly what we wanted. The idea was that every soldier gets assigned an offset for the king which they try to move towards. This felt quite static at first, so I made it that when the King moves the soldiers ignore the offset and just move towards the kings position. This created the feel of the crowd following you dynamically that we were looking for.</p>
-            <img src="/Pictures/CrowdKingCode.png"> 
+            <img src="/Pictures/CrowdKingCode.png" alt = "Screenshot of the Code to create that behavior"> 
         </div>
         <div class="work-div">
             <h1>Creating VFX</h1>
-            <img src="/Pictures/VFXShowcase.gif">
+            <img src="/Pictures/VFXShowcase.gif" alt = "Gif to showcase the VFX I made">
             <p>The VFX I created. Dust particles when walking, music notes from minions, minions ghost when dead, rocket trail, charge up particles when dashing, land particles and more </p>
             <p>I had to make sure that the VFX fit our flatshaded artstyle and thus made sure to get frequent feedback from the artists on the team.</p>
             <p>While I don't think I will be a VFX Artist again in the future, I think I was able to show the flexibility that I bring to a team. I think I am able to pick up many different roles in the team and fulfill them well. I think it's also valuable to know what needs to be done for VFX, how difficult and how important it is. I think my hands-on experience in this field made me a more well-rounded game developer. I think it also helped my communicative abilities as I was forced to communicate more with teammembers I would usually have less contact with.</p>
         </div>
         <div class="work-div">
             <h1>Creating the Hazards</h1>
-            <img src="/Pictures/BoulderHazardVer1.gif">
+            <img src="/Pictures/BoulderHazardVer1.gif" alt = "Gif to show me using the Spline Tool">
             <p>Hazard that follows a spline.</p>
             <p>This was the first time I used Unreal Engines spline tool. I used it so that Designers could easily create more interesting movement patterns for the Hazards than just going back and forwards. </p>
             <p>I created a lot of different Hazards in Unreal Blueprints, from swinging ones to ones moving back and forward and others following a spline like you see above. The main focus was the challenge for the players and so I made sure to communicate my ideas clear to the designers and check their opinions on what they thought was important and so on. There was also a lot of polishing done when implementing the art assets that I took responsibility on, such as the lawnmowers turning properly when they should turn around.</p>
