--- a/html/DIYHero.html
+++ b/html/DIYHero.html
@@ -7,7 +7,7 @@
 <body>
     <section class="work-section">
         <div class="work-div">
-            <img src="/Pictures/DIY-Hero.JPG" align="center" width="100%"></img>
+            <img src="/Pictures/DIY-Hero.JPG" align="center" width="100%" alt = "DIY Hero Banner Image"></img>
         </div>
         <div class="work-div">
             <h1> What was the project?</h1>
@@ -30,11 +30,11 @@
         </div>
         <div class="work-div">
             <h1> Dynamic Camera </h1>
-            <img src="/Pictures/DIYHeroCamera.gif" width="100%"> <!-- TODO ADD ACTUAL FAKE FLOCKING GIF-->
+            <img src="/Pictures/DIYHeroCamera.gif" width="100%" alt = "Gif of Action Camera I made"> 
             <p>A gif showing the Camera</p>
             <p>When you first hit the boss, the camera transfers from following mode to combat mode. Designers were able to define a position it should lerp to and the camera would lerp to that position and rotation. In combat, the camera zooms in and out and changes center depending on the position of the boss and the player so that you get that dynamic camera look that shows you just what you actually want to see. In the end the player can walk through the gate that has opened, which triggers another nice camera zoom that I created.</p>
             <p>Bellow is a sticker we made to promote our game during Play Day. We made one sticker for each member of the team and this one is mine, "carrying" the camera.</p>
-            <img src="/Pictures/mysticker.png">
+            <img src="/Pictures/mysticker.png" alt = "A sticker of the game we made for promotional purposes">
         </div>
     </section>
     
