--- a/html/Empires.html
+++ b/html/Empires.html
@@ -7,7 +7,7 @@
 <body>
     <section class="work-section">
         <div class="work-div">
-            <img src="/Pictures/Empires.JPG" align="center"></img>
+            <img src="/Pictures/Empires.JPG" align="center" alt = "Empires Banner Image"></img>
         </div>
         <div class="work-div">
             <h1> What was the project?</h1>
@@ -35,7 +35,7 @@
             <p>My goal for the AI was to create an AI that would show a little bit of "personality". For this I made each AI have different values for Militaryfocus and aggressiveness and depending on those values it would play in different ways. The way the game works, is that you get a tax collecting vessel once you have more than 10 Planets in your system, these are really important as they are what gets you gold to buy other things. The AI will use its discovery vessels to explore and claim neighboring systems to reach that point as fast as possible. After that, the before mentioned values come into play. The AI will choose to do a MilitaryMove such as attacking an enemy, building a bigger fleet or moving the existing fleet or to do a more civil move such as moving or creating a discovery vessel. The Military Action it takes is decided by the aggressiveness value, more aggressive AI will search more confrontation and move their fleets aggressively, while less aggressive, military focussed AI's may choose to just build up a huge fleet for defense.  
             </p>
             <p>This was the idea for the AI. It never really worked, because of bugs with figuring out which systems are on the outside of its territory, which are already captured and which will be captured. Unfortunately I did not have enough time to figure those out, so the AI only really worked during the early game, where it is expanding to 10 Systems as fast as possible.</p>
-            <img src="/Pictures/empiresCode.png">
+            <img src="/Pictures/empiresCode.png" alt = "Screenshot of AI Code of Empires">
         </div>
     </section>
     
