--- a/html/HammerFly.html
+++ b/html/HammerFly.html
@@ -7,7 +7,7 @@
 <body>
     <section class="work-section">
         <div class="work-div">
-            <img src="/Pictures/BannerArt.png" align="center"></img>
+            <img src="/Pictures/BannerArt.png" align="center" alt = "HammerStyle Banner Image"></img>
         </div>
         <div class="work-div">
             <h1> What was the project?</h1>
@@ -20,7 +20,7 @@
             <iframe width="640" height="360" src="https://www.youtube.com/embed/qKqPyabzKLE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="work-div">
-            <img src = "/Pictures/hammerfly.png"></img>
+            <img src = "/Pictures/hammerfly.png" alt = "HammerFly Logo"></img>
             <h1> What did I learn from the project?</h1>
             <p> 
                 This project was not the most challenging from a technical standpoint. However, it did teach me a lot about what it takes to publish an app. I also learned how to use Unitys Touch Input and how to serialize and deserialize things like score and settings to a device. I also researched Unity Ads and how to use them, but in the end decided not to put ads on the product.
