--- a/html/MoreWork.html
+++ b/html/MoreWork.html
@@ -13,7 +13,7 @@
             <table>
                 <tr>
                     <td id="Row1">
-                        <img src="../Pictures/LastResort.jpg"></src></td>
+                        <img src="../Pictures/LastResort.jpg" alt = "LastResort Banner Image"></src></td>
                     <td id="Row2">Last Resort is an online co-op base defense shooter with roguelike elements.</td>
                     <td id="Row3">Team Size: 29 <br> Time: 27 Weeks (this far) <br> Languages: Blueprints and C++</td>
                 </tr>
@@ -23,7 +23,7 @@
             <table>
                 <tr>
                     <td id="Row1">
-                        <img src="../Pictures/RefenseLogo.png"></src></td>
+                        <img src="../Pictures/RefenseLogo.png" alt = "Refense Banner Image"></src></td>
                     <td id="Row2">Refense is a 2D Action game, in which you have to reflect enemy projectiles back at them in order to increase your highscore. Click for more info.</td>
                     <td id="Row3">Team Size: 1 <br> Time: Around 40 Hours spread over 10 Weeks <br> Languages: C++</td>
                 </tr>
@@ -33,7 +33,7 @@
             <table>
                 <tr>
                     <td id="Row1">
-                        <img src="../Pictures/CrowdKing.png"></src></td>
+                        <img src="../Pictures/CrowdKing.png" alt = "Crowd King Banner Image"></src></td>
                     <td id="Row2">Crowd King is a top down platformer where you have to get through the level collecting as many minions as you can. Click for more info.</td>
                     <td id="Row3">Team Size: 12 <br> Time: 8 Weeks <br> Languages: C++ and Blueprints</td>
                 </tr>
@@ -43,7 +43,7 @@
             <table>
                 <tr>
                     <td id="Row1">
-                        <img src="../Pictures/Empires.JPG"></src></td>
+                        <img src="../Pictures/Empires.JPG" alt = "Empires Banner Image"></src></td>
                     <td id="Row2">Empires is a RTS Game set in space, that was created for the Raspberry Pi. Click for more info.</td>
                     <td id="Row3">Team Size: 1 <br> Time: 8 Weeks  <br> Language: C++</td>
                 </tr>
@@ -53,7 +53,7 @@
             <table>
                 <tr>
                     <td id="Row1">
-                        <img src="../Pictures/DIY-Hero.JPG"></src></td>
+                        <img src="../Pictures/DIY-Hero.JPG" alt = "DIY-Hero Banner Image"></src></td>
                     <td id="Row2">DIY Hero is a top down game, in which you play a little boy having to fight vegtables. Click for more info.</td>
                     <td id="Row3">Team Size: 9 <br> Time: 8 Weeks  <br> Language: Blueprints</td>
                 </tr>
@@ -63,7 +63,7 @@
             <table>
                 <tr>
                     <td id="Row1">
-                        <img src="../Pictures/Tetris.JPG"></src></td>
+                        <img src="../Pictures/Tetris.JPG" alt = "TetrisAI Banner Image"></src></td>
                     <td id="Row2">I used genetic algorithms to teach my AI how to play Tetris. Click for more info.</td>
                     <td id="Row3">Team Size: 1 <br> Time: 2 Weeks  <br> Language: C++</td>
                 </tr>
@@ -73,7 +73,7 @@
             <table>
                 <tr>
                     <td id="Row1">
-                        <img src="../Pictures/AmpleMan.JPG"></src></td>
+                        <img src="../Pictures/AmpleMan.JPG" alt = "AmpleEngine Banner Image"></src></td>
                     <td id="Row2">As a school project I had to create an engine and create a Megaman x2 clone with it. Click for more info.</td>
                     <td id="Row3">Team Size: 3 <br> Time: 8 Weeks  <br> Language: C++</td>
                 </tr>
@@ -83,7 +83,7 @@
             <table>
                 <tr>
                     <td id="Row1">
-                        <img src="../Pictures/RayTracer.png"></src></td>
+                        <img src="../Pictures/RayTracer.png" alt = "RayTracer Banner Image"></src></td>
                     <td id="Row2">In the first year of university, we had to create a (non-realtime) Ray Tracer that can handle reflection and refraction. Click for more info.</td>
                     <td id="Row3">Team Size: 1 <br> Time: 8 Weeks  <br> Language: C++</td>
                 </tr>
@@ -93,7 +93,7 @@
             <table>
                 <tr>
                     <td id="Row1">
-                        <img src="../Pictures/hammerfly.png"></src></td>
+                        <img src="../Pictures/hammerfly.png" alt = "HammerFly Banner Image"></src></td>
                     <td id="Row2">Hammer Fly is a mobile app that I created as a personal project. Click for more info.</td>
                     <td id="Row3">Team Size: 1 <br> Time: 8 Weeks  <br> Language: C#</td>
                 </tr>
@@ -106,7 +106,7 @@
             <table>
                 <tr>
                     <td id="Row1">
-                        <img src="../Pictures/Portfolio.png"></src></td>
+                        <img src="../Pictures/Portfolio.png" alt = "Portfolio Website Banner Image"></src></td>
                     <td id="Row2">I created this Portfolio Website myself from Scratch using nothing but HTML5 and CSS. <a href="https://github.com/MartinSchenkel/PortfolioWebsite">Github Link.</a> Click for more info.</td>
                     <td id="Row3">Team Size: 1 <br> Languages: HTML5 and CSS</td>
                 </tr>
