--- a/html/RayTracer.html
+++ b/html/RayTracer.html
@@ -7,7 +7,7 @@
 <body>
     <section class="work-section">
         <div class="work-div">
-            <img src="/Pictures/RayTracer.png" align="center"></img>
+            <img src="/Pictures/RayTracer.png" align="center" alt = "RayTracer Banner Image"></img>
         </div>
         <div class="work-div">
             <h1> What was the project?</h1>
@@ -19,7 +19,7 @@
         <div class="work-div">
             <h1> How does it work? </h1>
             <p>For every pixel, I calculate a ray from the camera through the pixel. I then check for intersecition and try getting the color of the object I intersected this is the function you see below. If the object has reflections or refractions enabled, I create a new ray and mix the color of the object and the color of what the new ray returns according to the reflection/refraction strength.</p>
-            <img src="../Pictures/RayTracerCode.png"></src>
+            <img src="../Pictures/RayTracerCode.png" alt = "Screenshot of some RayTracer code"></src>
         </div>
     </section>
 </body>
