--- a/html/Refense.html
+++ b/html/Refense.html
@@ -7,7 +7,7 @@
 <body>
     <section class="work-section">
         <div class="work-div">
-            <img src="/Pictures/Refense.png" align="center" width="90%"></img>
+            <img src="/Pictures/Refense.png" align="center" width="90%" alt = "Refense Banner Image"></img>
         </div>
         <div class="work-div">
             <h1> What was the project?</h1>
@@ -26,7 +26,7 @@
         </div>
         <div class="work-div">
             <h1> Shaders </h1>
-            <img src="/Pictures/RefenseShaderCode.png" width="100%">
+            <img src="/Pictures/RefenseShaderCode.png" width="100%" alt = "Code of a shader I made">
             <p>
                This was the first time I tried to write shaders. I had no experience and learned a lot reading the <a href="https://thebookofshaders.com/">Book of Shaders</a>
                <br>
@@ -35,22 +35,22 @@
         </div>
         <div class="work-div">
             <h1> Particles </h1>
-            <img src="/Pictures/RefenseParticleSystemModuleOffset.gif" width="100%">
+            <img src="/Pictures/RefenseParticleSystemModuleOffset.gif" width="100%" alt = "Gif of Particle Effect I made with my own system">
             <p>For this game, I wanted to be able to create cool VFX, as I think those can really get your game onto another level.</p>
-            <img src="/Pictures/RefenseParticleSystemGravityPointFire.gif" width="100%">
+            <img src="/Pictures/RefenseParticleSystemGravityPointFire.gif" width="100%" alt = "Gif of Particle Effect I made with my own system">
             <p>The 2D Sprite Particle System that I created was inspired by Unreal Engines Cascade System. Each Particle System consists of any number of Emitters, which spawn and move the particles themselves. This allows for some really cool VFX. </p>
-            <img src="/Pictures/RefenseParticleSystemVer2.gif" width="100%">
+            <img src="/Pictures/RefenseParticleSystemVer2.gif" width="100%" alt = "Gif of Particle Effect I made with my own system">
         </div>
         <div class="work-div">
             <h1> Menu </h1>
-            <img src="/Pictures/RefenseMainMenu.gif" width="100%">
+            <img src="/Pictures/RefenseMainMenu.gif" width="100%" alt = "Gif of Main Menu I made with my own system">
             <p>I also needed to add a good menu, that allows you to change settings, such as Audio and Keybinds, as well as look at the credits and start/quit the game. For that I created multiple UI Elements (Buttons, Sliders, Scrolling Text etc.) that I reused throughout the different menus.</p>
-            <img src="/Pictures/RefensePauseScreen1.gif" width="100%">
+            <img src="/Pictures/RefensePauseScreen1.gif" width="100%" alt = "Gif of Pause Menu I made with my own system">
             <p>I was also able to reuse the Settings screen in the pause menu and it works really well. I learned how to get an AppData Path to save the settings in, which is how most games seem to do it. </p>
         </div>
         <div class="work-div">
             <h1> AI </h1>
-            <img src="/Pictures/RefenseEasyMode1.gif" width="100%">
+            <img src="/Pictures/RefenseEasyMode1.gif" width="100%" alt = "Gif of the AI I made">
             <p>For the AI, I went simple. Basically what they do is they move to a random X-Coordinate, jumping in semi-random intervals and shooting a projectile in semi-random intervals. This turned out to be fun and challenging enough and showed me that a Fun AI does not have to be a Smart AI.</p>
         </div>
     </section>
