--- a/html/TetrisAI.html
+++ b/html/TetrisAI.html
@@ -7,7 +7,7 @@
 <body>
     <section class="work-section">
         <div class="work-div">
-            <img src="/Pictures/Tetris.JPG" align="center" width="90%"></img>
+            <img src="/Pictures/Tetris.JPG" align="center" width="90%" alt = "TetrisAI Banner Image"></img>
         </div>
         <div class="work-div">
             <h1> What was the project?</h1>
@@ -29,7 +29,7 @@
         </div>
         <div class="work-div">
             <h1> The Results </h1>
-            <img src="/Pictures/TetrisAIResults.png" width="100%"> <!-- TODO ADD ACTUAL FAKE FLOCKING GIF-->
+            <img src="/Pictures/TetrisAIResults.png" width="100%" alt = "Picture of a graph showing the improvement of the AI over time">
             <p>
                 I made the program print out the score of the best, the worst, the mediocre and average of all genomes. From that data I compiled this graph. 
             </p>
@@ -42,7 +42,7 @@
         </div>
         <div class="work-div">
             <h1> The genetic alogrithm </h1>
-            <img src="/Pictures/TetrisAICode.png" width="100%"> <!-- TODO ADD ACTUAL VFX COMPILATION GIF-->
+            <img src="/Pictures/TetrisAICode.png" width="100%" alt = "Screenshot of Genetic Algorithm code"> 
             <p>The genetic algorithm I created.</p>
             <p>After each generation, I delete the worst half of all genomes. I then use this "makeChild()" function to randomly combine two Genomes and possibly mutate them. </p>
             <p>Each Genome has 6 Parameters which are used to determine which move it will perform. The AI will evaluate all possible positions of the next piece and then evaluate the board using these parameters, choosing the one that gives the best score. Changing these parameters changes the AI behavior.</p>
