--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <h1 class = "page-title work-title">My work</h1>
                     <div class="card middle">
                         <div class = "front">
-                            <img class = "headimage" src = "Pictures/CrowdKing.png">
+                            <img class = "headimage" src = "Pictures/CrowdKing.png" alt = "Crowd King Banner Image">
                             <h2>Crowd King</h2>
                             <p>
                                 Crowd King was my year two project at Breda University of Applied Sciences. It is a cute platformer and available for download on itch.io
@@ -62,7 +62,7 @@
                     </div>
                     <div class="card middle">
                         <div class = "front">
-                            <img class = "headimage" src = "Pictures/LastResort.jpg">
+                            <img class = "headimage" src = "Pictures/LastResort.jpg" alt = "Last Resort Banner Image">
                             <h2>Last Resort</h2>
                             <p>
                                 Last Resort is an online co-op base defense shooter with roguelike elements.
@@ -85,7 +85,7 @@
                     </div>
                     <div class="card middle">
                         <div class = "front">
-                            <img class = "headimage" src = "Pictures/Refense.png">
+                            <img class = "headimage" src = "Pictures/Refense.png" alt = "Refense Banner Image">
                             <h2>Refense</h2>
                             <p>
                                 Refense is a 2D Action game in which you have to reflect the enemy projectiles back at them in order to increase your highscore.
@@ -125,12 +125,12 @@
                             My experience with <br>
                             <h3>Programming Languages</h3>
                             <ul class = "icon-list">
-                                <li><img class = "icon" src = "Pictures/Icons/C++.svg" onclick = "parent.open('https://en.wikipedia.org/wiki/C%2B%2B')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/CSharp.svg" onclick = "parent.open('https://en.wikipedia.org/wiki/C_Sharp_(programming_language)')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/Java.svg" onclick = "parent.open('https://www.java.com/en/')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/HTML5.svg" onclick = "parent.open('https://en.wikipedia.org/wiki/HTML5')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/JS.png" onclick = "parent.open('https://developer.mozilla.org/en-US/docs/Web/JavaScript')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/gdscript.svg" onclick = "parent.open('https://docs.godotengine.org/en/stable/getting_started/scripting/gdscript/gdscript_basics.html')"></li>
+                                <li><img class = "icon" alt = "C++ icon" src = "Pictures/Icons/C++.svg" onclick = "parent.open('https://en.wikipedia.org/wiki/C%2B%2B')"></li>
+                                <li><img class = "icon" alt = "CSharp icon" src = "Pictures/Icons/CSharp.svg" onclick = "parent.open('https://en.wikipedia.org/wiki/C_Sharp_(programming_language)')"></li>
+                                <li><img class = "icon" alt = "Java icon" src = "Pictures/Icons/Java.svg" onclick = "parent.open('https://www.java.com/en/')"></li>
+                                <li><img class = "icon" alt = "HTML5 icon" src = "Pictures/Icons/HTML5.svg" onclick = "parent.open('https://en.wikipedia.org/wiki/HTML5')"></li>
+                                <li><img class = "icon" alt = "JavaScript icon" src = "Pictures/Icons/JS.png" onclick = "parent.open('https://developer.mozilla.org/en-US/docs/Web/JavaScript')"></li>
+                                <li><img class = "icon" alt = "GodotScript icon" src = "Pictures/Icons/gdscript.svg" onclick = "parent.open('https://docs.godotengine.org/en/stable/getting_started/scripting/gdscript/gdscript_basics.html')"></li>
                             </ul>
                         </li>
                         <li>
@@ -141,19 +141,19 @@
                             My experience with <br>
                             <h3>Development Softwares</h3>
                             <ul class = "icon-list">
-                                <li><img class = "icon" src = "Pictures/Icons/VS.svg" onclick = "parent.open('https://visualstudio.microsoft.com/')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/VSC.svg" onclick = "parent.open('https://visualstudio.microsoft.com/')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/p4c.png" onclick = "parent.open('https://www.perforce.com/')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/Unity.svg" onclick = "parent.open('https://unity.com/')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/UE4.svg" onclick = "parent.open('https://www.unrealengine.com/en-US/')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/godot.svg" onclick = "parent.open('https://godotengine.org/')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/blender.svg" onclick = "parent.open('https://www.blender.org/')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/trello.svg" onclick = "parent.open('https://trello.com/en')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/Jenkins.svg" onclick = "parent.open('https://www.jenkins.io/')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/github.svg" onclick = "parent.open('https://github.com/')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/rider.png" onclick = "parent.open('https://www.jetbrains.com/rider/')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/Monday.svg" onclick = "parent.open('https://www.monday.com')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/jira.svg" onclick = "parent.open('https://www.atlassian.com/software/jira')"></li>
+                                <li><img class = "icon" alt = "VisualStudio icon" src = "Pictures/Icons/VS.svg" onclick = "parent.open('https://visualstudio.microsoft.com/')"></li>
+                                <li><img class = "icon" alt = "VisualStudio Code icon" src = "Pictures/Icons/VSC.svg" onclick = "parent.open('https://visualstudio.microsoft.com/')"></li>
+                                <li><img class = "icon" alt = "Perforce Client icon" src = "Pictures/Icons/p4c.png" onclick = "parent.open('https://www.perforce.com/')"></li>
+                                <li><img class = "icon" alt = "Unity icon" src = "Pictures/Icons/Unity.svg" onclick = "parent.open('https://unity.com/')"></li>
+                                <li><img class = "icon" alt = "Unreal Engine 4 icon" src = "Pictures/Icons/UE4.svg" onclick = "parent.open('https://www.unrealengine.com/en-US/')"></li>
+                                <li><img class = "icon" alt = "Godot icon" src = "Pictures/Icons/godot.svg" onclick = "parent.open('https://godotengine.org/')"></li>
+                                <li><img class = "icon" alt = "Blender icon" src = "Pictures/Icons/blender.svg" onclick = "parent.open('https://www.blender.org/')"></li>
+                                <li><img class = "icon" alt = "Trello icon" src = "Pictures/Icons/trello.svg" onclick = "parent.open('https://trello.com/en')"></li>
+                                <li><img class = "icon" alt = "Jenkins icon" src = "Pictures/Icons/Jenkins.svg" onclick = "parent.open('https://www.jenkins.io/')"></li>
+                                <li><img class = "icon" alt = "GitHub icon" src = "Pictures/Icons/github.svg" onclick = "parent.open('https://github.com/')"></li>
+                                <li><img class = "icon" alt = "Rider icon" src = "Pictures/Icons/rider.png" onclick = "parent.open('https://www.jetbrains.com/rider/')"></li>
+                                <li><img class = "icon" alt = "Monday icon" src = "Pictures/Icons/Monday.svg" onclick = "parent.open('https://www.monday.com')"></li>
+                                <li><img class = "icon" alt = "Jira icon" src = "Pictures/Icons/jira.svg" onclick = "parent.open('https://www.atlassian.com/software/jira')"></li>
 
                             </ul>
                         </li>
@@ -173,9 +173,9 @@
                             </ul>
                             <h3>My social links:</h3>
                             <ul class = "icon-list">
-                                <li><img class = "icon" src = "Pictures/Icons/twitter.svg" onclick = "parent.open('https://twitter.com/SchenkelGameDev')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/Linkedin.svg" onclick = "parent.open('https://www.linkedin.com/in/martin-schenkel-8231981bb/')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/mail.svg" onclick = "parent.open('mailto:martin.schenkel.ger@gmail.com')"></li>
+                                <li><img class = "icon" alt = "Twitter icon" src = "Pictures/Icons/twitter.svg" onclick = "parent.open('https://twitter.com/SchenkelGameDev')"></li>
+                                <li><img class = "icon" alt = "LinkedIn icon" src = "Pictures/Icons/Linkedin.svg" onclick = "parent.open('https://www.linkedin.com/in/martin-schenkel-8231981bb/')"></li>
+                                <li><img class = "icon" alt = "Mail icon" src = "Pictures/Icons/mail.svg" onclick = "parent.open('mailto:martin.schenkel.ger@gmail.com')"></li>
                             </ul>
                         </li>
                     </ul>
