--- a/html/LastResort.html
+++ b/html/LastResort.html
@@ -7,7 +7,7 @@
 <body>
     <section class="work-section">
         <div class="work-div">
-            <img src="/Pictures/LastResort.jpg" align="center" width="90%"></img>
+            <img src="/Pictures/LastResort.jpg" align="center" width="90%" alt = "Last Resort Banner Image"></img>
         </div>
         <div class="work-div">
             <h1> What was the project?</h1>
