Adding rel="noreferrer" to target="_blank" links
This is safer according to "LightHouse"

--- a/html/HammerFly.html
+++ b/html/HammerFly.html
@@ -12,7 +12,7 @@
         <div class="work-div">
             <h1> What was the project?</h1>
             <p>
-                Hammer Fly is a personal project I worked on. I made it in Unity on my own. Some assets are from Kenney Assets and some are created by me. I developed it for Android and it is currently available on the <a href = "https://play.google.com/store/apps/details?id=com.DefaultCompany.HammerFly" target="_blank">Google Play Store</a>
+                Hammer Fly is a personal project I worked on. I made it in Unity on my own. Some assets are from Kenney Assets and some are created by me. I developed it for Android and it is currently available on the <a href = "https://play.google.com/store/apps/details?id=com.DefaultCompany.HammerFly" rel="noreferrer"target="_blank">Google Play Store</a>
             </p>
         </div>
         <div class="work-div">
