--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                                 <h3>My Responsibilities:</h3>
                                 <p>Gameplay programming (e.g. Hazards) <br> and VFX</p>
                                 <h3>Trailer:</h3>
-                                <p><a href = "https://youtu.be/2vPxmQ4hcLo" target="_blank">Link to the trailer</a></p>
+                                <p><a href = "https://youtu.be/2vPxmQ4hcLo" target="_blank" rel="noreferrer">Link to the trailer</a></p>
                                 <h3>Download:</h3>
-                                <p><a href = "https://igad.itch.io/crowdking" target="_blank">Link to the itch.io page</a></p>
+                                <p><a href = "https://igad.itch.io/crowdking" target="_blank" rel="noreferrer">Link to the itch.io page</a></p>
                             </div>
                         </div>
                     </div>
@@ -102,8 +102,8 @@
                                 <h3>My Responsibilities:</h3>
                                 <p>Everything</p>
                                 <h3>Trailer:</h3>
-                                <p><a href = "https://www.youtube.com/watch?v=dXlw67SfYQI" target="_blank">Link to the trailer</a></p>
-                                <p><a href = "https://maddisch.itch.io/Refense" target="_blank">Link to the itch.io page</a></p>
+                                <p><a href = "https://www.youtube.com/watch?v=dXlw67SfYQI" target="_blank"rel="noreferrer">Link to the trailer</a></p>
+                                <p><a href = "https://maddisch.itch.io/Refense" target="_blank"rel="noreferrer">Link to the itch.io page</a></p>
                             </div>
                         </div>
                     </div>
