--- a/html/MoreWork.html
+++ b/html/MoreWork.html
@@ -112,6 +112,16 @@
                 </tr>
             </table>
         </div>
+        <div class="more-work-div" onclick="window.location.href='PythonWebscraper.html';">
+            <table>
+                <tr>
+                    <td id="Row1">
+                        <img src="../Pictures/webscraper.png" alt = "Python Webscraper Banner Image"></src></td>
+                    <td id="Row2">I created a Python Webscraper, to get game stats from my friends and me to display on our <a href="https://asterior.de">Website.</a>  <a href="https://https://github.com/MartinSchenkel/PythonWebscraper">Github Link.</a> Click for more info.</td>
+                    <td id="Row3">Team Size: 1 <br> Language: Python</td>
+                </tr>
+            </table>
+        </div>
         <div class="more-work-header-div">
             <p> - Other Projects - </p>
         </div>
