Updated Profile Pic

--- a/html/LastResort.html
+++ b/html/LastResort.html
@@ -19,6 +19,32 @@
                 The game is set to release on Steam, first in Early Access and then by the end of the academic year as a full release. You can see the <a href="https://store.steampowered.com/app/1491650/Last_Resort/">Steam Page here.</a>
             </p>
         </div>
+        <div class="work-div">
+            <h1> What did I learn?</h1>
+            <p>
+                This project has taught me a lot about working in a big team. It was the biggest team I have worked in yet and also the first time I had to share my own responsibilties with other programmers. I think there were a lot of things we could have done better. The biggest one of that is planning with a Player Perspective in mind. A lot of development was done without considering the actual gameplay and I think it was the biggest pitfall of the project.
+            </p>
+        </div>
+        
+        <div class="work-div">
+            <h1> HTN</h1>
+            <p>
+               The original plan for the AI was to create an HTN Planner in Unreal Engine for the AI. HTN stands for Hierarchical Task Network and it's a system used for example in Killzone. It offers fast and organic feeling AI Actions. However, it turned out that it was out of scope for us to create such a system especially because we also wanted an Editor interface for it, so that AI Designers can make the AI Behavior as they intend. 
+            </p>
+            <p>
+                As a contingency plan, we went with Unreal Engines Behavior Trees coupled with a Utilty-Action System. This system led to a lot of bugs and inconviences when creating the AI and I would not choose to do it like this again.
+            </p>
+        </div>
+
+        <div class="work-div">
+            <h1> Being a Scrum Master</h1>
+            <p>
+                In the span of this project, I volunteered to be a Scrum Master. I wanted to try out a role with more responsibility in terms of planning and leading a team. I learned about communicating effectively with the Producers and mediating their requests to my feature team.
+            </p>
+            <p>
+                In the end, I have to admit that I did not enjoy being a Scrum Master. I am not a fan of the responsibility and I found the Sprint Planning Sessions extremely exhausting. That being said, I am glad that I tried it and I think that if I had to, I could be a Scrum Master again.
+            </p>
+        </div>
     </section>
     
 </body>
