--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </h2>
                     </div>
                     <div class = "image">
-                        <img src = "Pictures/Passbild.jpg" alt = "Picture of me" />
+                        <img src = "Pictures/_MG_9883.jpg" alt = "Picture of me" width="323"/>
                     </div>
                 </section>
 
